实现 Promise happy-path & then 方法部分功能

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
