--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "vitest": "^0.23.4"
+    "typescript": "^4.8.3",
+    "vitest": "^0.24.0"
   }
 }
