--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "happy-dom": "^7.4.0",
     "typescript": "^4.8.3",
     "vite": "^3.1.6",
     "vitest": "^0.24.0"
